# sudoku

./: CMakeLists.txt  README.md
boards/: board1.su
src/: element.h  game.cpp  game.h  main.cpp  scene.h  sceneHandler.h  sceneList.h
src/mainMenu/: mainMenuScene.cpp  mainMenuScene.h
src/sudoku/: BoardLoaderError.h  autoNotesButton.cpp  autoNotesButton.h  boardDetails.cpp  boardDetails.h  boardElement.cpp  boardElement.h  boardGenerator.h  boardGeneratorTests.cpp  boardLoader.h  gameScene.cpp  gameScene.h  inputNumber.cpp  inputNumber.h  intPairHash.h  note.cpp  note.h  noteTests.cpp  notesButton.cpp  notesButton.h  sudoku.cpp  sudoku.h  tile.cpp  tile.h  tileTests.cpp  timer.cpp  timer.h
